bpo-38640: Allow break and continue in always false while loops (GH-16992) (cherry picked from commit 6c3e66a34b95fff07df0ad5086104dd637a091ce)

Co-authored-by: Pablo Galindo <Pablogsal@gmail.com>